--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
                 <div id="leaderboard-list"></div>
             </div>
         </div>
+        
+        <!-- User Profile Popup -->
+        <div id="user-popup" class="popup-hidden">
+            <div class="popup-content">
+                <span id="close-user-popup" class="close-btn">&times;</span>
+                <div id="auth-section">
+                    <button id="btn-google-login">Đăng nhập bằng Google</button>
+                </div>
+                <div id="profile-section" class="display-none">
+                    <p id="welcome-msg"></p>
+                    <input type="text" id="change-name-input" placeholder="Nhập tên mới..." maxlength="15">
+                    <button id="btn-save-name">Đổi tên</button>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="game.js"></script>
 </body>
